Front-End 1.5.5: Background image issue fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="Assets/CSS/style.css">
+  <link rel="stylesheet" href="Assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=New+Rocker|PT+Serif&display=swap" rel="stylesheet">
 
   <title>New York Times Article Search App</title>
@@ -62,7 +62,7 @@
             <!-- TODO: form that takes in user search parameters -->
             <form>
               <div class="form-group">
-                <
+                
               </div>
             </form>
           </div>
