Front-End 1.7.5: Added results div

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
           </div>
 
           <div class="col col-md-6 col-xs-12">
-            <!-- TODO: dynamic div that will need a placeholder, but will be changed when search results appear -->
+            <div class="text-center" id="results">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, voluptates, adipisci dolorum veritatis repudiandae nostrum ea sunt amet id dicta atque illum molestias reprehenderit eligendi similique, omnis reiciendis sed quaerat.
+            </div>
           </div>
 
         </div>
