--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
           </div>
 
           <div class="col col-md-6 col-xs-12">
-            <div class="text-center" id="results">
+            <h2 id="results-header">
+              Your Stories
+            </h2>
+            <div id="results">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, voluptates, adipisci dolorum veritatis repudiandae nostrum ea sunt amet id dicta atque illum molestias reprehenderit eligendi similique, omnis reiciendis sed quaerat.
             </div>
           </div>
